--- a/admin.html
+++ b/admin.html
@@ -3,38 +3,71 @@
 <head>
 <meta charset="utf-8"/>
 <meta name="viewport" content="width=device-width, initial-scale=1"/>
-<title>관리자 로그인</title>
+<title>관리자 페이지</title>
 <link rel="stylesheet" href="common.css"/>
 <link rel="stylesheet" href="app.min.css"/>
 <style>
-.wrap{max-width:400px;margin:0 auto;padding:40px 16px;text-align:center}
-form{display:grid;gap:14px;margin-top:20px}
-input{padding:10px;border:1px solid #e5e7eb;border-radius:10px}
-button{padding:10px;border-radius:10px;background:#111;color:#fff;cursor:pointer}
-.error{color:#dc2626;font-size:.9rem;margin-top:10px}
+.wrap{max-width:960px;margin:0 auto;padding:20px 16px}
+table{width:100%;border-collapse:collapse;margin-top:20px}
+th,td{border:1px solid #e5e7eb;padding:10px;font-size:.9rem;text-align:left}
+th{background:#f9fafb}
+.actions{display:flex;gap:6px}
+button{padding:6px 10px;border-radius:8px;border:1px solid #ccc;cursor:pointer}
+button.approve{background:#16a34a;color:#fff;border:none}
+button.delete{background:#dc2626;color:#fff;border:none}
+.error{color:#dc2626;font-size:.9rem;margin-top:10px;text-align:center}
 </style>
 </head>
 <body>
   <main class="wrap">
     <h1>관리자 로그인</h1>
     <p>이메일과 비밀번호로 로그인하세요.</p>
-    <form id="loginForm">
+    <form id="loginForm" style="margin-bottom:30px;display:grid;gap:12px;max-width:400px">
       <input type="email" id="email" placeholder="이메일" required/>
       <input type="password" id="password" placeholder="비밀번호" required/>
       <button type="submit">로그인</button>
       <div id="error" class="error"></div>
     </form>
+
+    <section id="adminSection" style="display:none">
+      <h2>프로젝트 승인 관리</h2>
+      <table>
+        <thead>
+          <tr>
+            <th>프로젝트명</th>
+            <th>구조자</th>
+            <th>요약</th>
+            <th>상태</th>
+            <th>액션</th>
+          </tr>
+        </thead>
+        <tbody id="projects-body">
+          <tr><td colspan="5" class="muted">불러오는 중...</td></tr>
+        </tbody>
+      </table>
+    </section>
   </main>
 
   <script type="module">
     import { getAuth, signInWithEmailAndPassword } from "https://www.gstatic.com/firebasejs/10.8.0/firebase-auth.js";
     import { getFirestore, doc, getDoc } from "https://www.gstatic.com/firebasejs/10.8.0/firebase-firestore.js";
     import { app } from "./js/firebase.js";
+    import { fetchAllProjects, approveProject, deleteProject } from "./js/api.js";
 
     const auth = getAuth(app);
     const db = getFirestore(app);
+
     const form = document.getElementById("loginForm");
     const errorDiv = document.getElementById("error");
+    const adminSection = document.getElementById("adminSection");
+    const $body = document.getElementById("projects-body");
+
+    // ✅ Firestore 기반 관리자 체크
+    async function isAdminUser(uid){
+      const docRef = doc(db, "admins", uid);
+      const snap = await getDoc(docRef);
+      return snap.exists();
+    }
 
     form.addEventListener("submit", async (e) => {
       e.preventDefault();
@@ -45,22 +78,65 @@ button{padding:10px;border-radius:10px;background:#111;color:#fff;cursor:pointer
       try {
         const userCredential = await signInWithEmailAndPassword(auth, email, password);
         const user = userCredential.user;
-        console.log("로그인 성공:", user.uid);
+        console.log("로그인 UID:", user.uid);
 
-        // ✅ Firestore에서 admin 여부 확인
-        const adminRef = doc(db, "admins", user.uid);
-        const snap = await getDoc(adminRef);
-
-        if (snap.exists() && snap.data().role === "admin") {
-          // 관리자 권한 있음 → 관리자 페이지 이동
-          window.location.href = "admin.html";
-        } else {
+        const ok = await isAdminUser(user.uid);
+        if (!ok) {
           errorDiv.textContent = "⚠️ 관리자 권한이 없는 계정입니다.";
+          return;
         }
+
+        // ✅ 관리자 권한 있음 → 승인 섹션 보여주기
+        form.style.display = "none";
+        adminSection.style.display = "block";
+        render();
 
       } catch (err) {
         console.error("로그인 실패:", err);
         errorDiv.textContent = "로그인 실패: " + (err.message || "");
+      }
+    });
+
+    function fmtStatus(p){return p.adminApproved?"승인됨 ✅":"대기중 ⏳"}
+
+    async function render(){
+      try{
+        const list=await fetchAllProjects();
+        if(!list.length){
+          $body.innerHTML='<tr><td colspan="5" class="muted">아직 등록된 프로젝트가 없습니다.</td></tr>';
+          return;
+        }
+        $body.innerHTML=list.map(p=>`
+          <tr>
+            <td>${p.name??'(이름 없음)'}</td>
+            <td>${p.rescuerName??'-'}</td>
+            <td>${p.summary??''}</td>
+            <td>${fmtStatus(p)}</td>
+            <td class="actions">
+              ${!p.adminApproved?`<button class="approve" data-id="${p.id}">승인</button>`:''}
+              <button class="delete" data-id="${p.id}">삭제</button>
+            </td>
+          </tr>`).join('');
+      }catch(e){
+        console.error(e);
+        $body.innerHTML='<tr><td colspan="5" class="muted">프로젝트를 불러오지 못했습니다.</td></tr>';
+      }
+    }
+
+    $body.addEventListener('click', async e=>{
+      if(e.target.matches('.approve')){
+        if(confirm("승인하시겠습니까?")){
+          await approveProject(e.target.dataset.id);
+          alert("승인되었습니다.");
+          render();
+        }
+      }
+      if(e.target.matches('.delete')){
+        if(confirm("삭제하시겠습니까?")){
+          await deleteProject(e.target.dataset.id);
+          alert("삭제되었습니다.");
+          render();
+        }
       }
     });
   </script>
