--- a/project.html
+++ b/project.html
@@ -12,13 +12,12 @@
   h1{font-size:1.6rem;font-weight:800;margin-bottom:8px}
   .muted{color:#6b7280;font-size:.9rem}
   /* 이미지 영역 */
-  .slider{position:relative;overflow:hidden;border-radius:12px;margin:20px 0;box-shadow:0 4px 10px rgba(0,0,0,0.05);max-height:320px}
-  .slider img{width:100%;height:320px;object-fit:cover;display:none}
+  .slider{position:relative;overflow:hidden;border-radius:12px;margin:20px 0;box-shadow:0 4px 10px rgba(0,0,0,0.05);max-height:240px}
+  .slider img{width:100%;height:240px;object-fit:cover;display:none}
   .slider img.active{display:block}
   .slider-nav{position:absolute;top:50%;width:100%;display:flex;justify-content:space-between;transform:translateY(-50%)}
   .slider-nav button{background:rgba(0,0,0,.5);color:#fff;border:none;padding:6px 10px;border-radius:6px;cursor:pointer}
-  /* CTA 버튼 */
-  .btn.kakao{background:#FEE500;color:#111;padding:12px 20px;border-radius:12px;display:inline-block;font-weight:600;margin-top:16px}
+  /* 공유 버튼 */
   .share-buttons{margin:20px 0;display:flex;gap:12px;flex-wrap:wrap}
   .share-buttons button{
     flex:1;min-width:120px;
@@ -31,18 +30,29 @@
   .share-kakao{background:#FEE500;color:#111}
   .share-insta{background:#E4405F;color:#fff}
   .share-copy{background:#6b7280;color:#fff}
-  /* 상세설명 강조 */
+  /* 상세설명 카드 */
   .project-card{
     background:#fff;
     border-radius:16px;
-    padding:24px;
+    padding:28px;
     margin-top:24px;
     box-shadow:0 3px 8px rgba(0,0,0,0.06);
   }
-  .project-card p{font-size:1rem;line-height:1.5;margin-bottom:12px}
-  .project-card .muted{font-size:.95rem;margin-bottom:8px}
-  /* Progress Bar */
-  .progress-wrap{margin:20px 0}
+  .project-card p{
+    font-size:1.05rem;
+    line-height:1.6;
+    margin-bottom:14px;
+  }
+  /* 정보 카드 */
+  .info-card{
+    background:#fff;
+    border-radius:16px;
+    padding:20px;
+    margin-top:20px;
+    box-shadow:0 3px 8px rgba(0,0,0,0.08);
+  }
+  .info-card p{margin:6px 0;font-size:.95rem}
+  .progress-wrap{margin:14px 0}
   .progress{background:#e5e7eb;border-radius:12px;overflow:hidden;height:20px}
   .progress-bar{
     height:100%;
@@ -54,6 +64,7 @@
     line-height:20px;
     width:0%; /* 항상 0% */
   }
+  .btn.kakao{background:#FEE500;color:#111;padding:12px 20px;border-radius:12px;display:inline-block;font-weight:600;margin-top:16px;text-align:center}
 </style>
 </head>
 <body>
@@ -154,21 +165,22 @@
             <button class="share-copy" id="shareCopy"><i class="fa-solid fa-link"></i> 링크복사</button>
           </div>
 
-          <!-- 상세설명 카드 -->
+          <!-- 상세설명 -->
           <div class="project-card">
             <p>${p.description ?? ''}</p>
-            <p class="muted">목표 금액: ${fmt(goal)}원</p>
-            <p class="muted">현재 모금: ${fmt(current)}원</p>
+          </div>
 
-            <!-- 달성률 Progress Bar (항상 0%) -->
+          <!-- 프로젝트 정보 박스 -->
+          <div class="info-card">
+            <p><strong>목표 금액:</strong> ${fmt(goal)}원</p>
+            <p><strong>현재 모금:</strong> ${fmt(current)}원</p>
             <div class="progress-wrap">
               <div class="progress">
                 <div class="progress-bar">0%</div>
               </div>
             </div>
-
-            <p class="muted">구조자 부담금: ${fmt(p.rescuerContribution)}원</p>
-            <p class="muted">지지자 수: ${fmt(p.supportersCount)}</p>
+            <p><strong>구조자 부담금:</strong> ${fmt(p.rescuerContribution)}원</p>
+            <p><strong>지지자 수:</strong> ${fmt(p.supportersCount)}</p>
             ${p.registrantKakaoId ? `<a href="https://open.kakao.com/o/${p.registrantKakaoId}" target="_blank" class="btn kakao">카카오톡으로 참여하기</a>` : ''}
           </div>
         `;
